/*
 * Copyright 2018 The Feast Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package feast.core;

import "feast/specs/EntitySpec.proto";
import "feast/specs/FeatureSpec.proto";
import "feast/specs/FeatureGroupSpec.proto";
import "feast/specs/StorageSpec.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option java_package = "feast.core";
option java_outer_classname = "UIServiceProto";
option go_package = "github.com/gojek/feast/protos/generated/go/feast/core";

service UIService {
    /*
    Get entity specified in request.
    This process returns a single of entity specs.
    */
    rpc GetEntity(UIServiceTypes.GetEntityRequest) returns (UIServiceTypes.GetEntityResponse) {};

    /*
    Get all entities.
    This process returns a list of entity specs.
    */
    rpc ListEntities(google.protobuf.Empty) returns (UIServiceTypes.ListEntitiesResponse) {};

    /*
    Get feature specified in request.
    */
    rpc GetFeature(UIServiceTypes.GetFeatureRequest) returns (UIServiceTypes.GetFeatureResponse){};

   /*
    Get all features.
    This process returns a list of feature specs.
    */
    rpc ListFeatures(google.protobuf.Empty) returns (UIServiceTypes.ListFeaturesResponse){};

    /*
    Get feature group specified in request.
    */
    rpc GetFeatureGroup(UIServiceTypes.GetFeatureGroupRequest) returns (UIServiceTypes.GetFeatureGroupResponse){};

    /*
    Get all feature groups.
    This process returns a list of feature group specs.
    */
    rpc ListFeatureGroups(google.protobuf.Empty) returns (UIServiceTypes.ListFeatureGroupsResponse){};

   /*
    Get storage spec specified in request.

    */
    rpc GetStorage(UIServiceTypes.GetStorageRequest) returns (UIServiceTypes.GetStorageResponse){};

    /*
    Get all storage specs.
    This process returns a list of storage specs.
    */
    rpc ListStorage(google.protobuf.Empty) returns (UIServiceTypes.ListStorageResponse){};
}

message UIServiceTypes {
    // Expanded entity spec
    message EntityDetail {
        feast.specs.EntitySpec spec = 1;
        repeated string jobs = 2;
        google.protobuf.Timestamp lastUpdated = 3;
    }

    message GetEntityRequest {
        string id = 1;
    }

    message GetEntityResponse {
      EntityDetail entity = 1;
    }

    message ListEntitiesResponse {
        repeated EntityDetail entities = 1;
    }

    // Expanded feature spec
    message FeatureDetail {
        feast.specs.FeatureSpec spec = 1;
        string warehouseView = 2;
        bool enabled = 3;
        repeated string jobs = 4;
        google.protobuf.Timestamp lastUpdated = 5;
        google.protobuf.Timestamp created = 6;
    }

    message GetFeatureRequest {
        string id = 1;
    }

    message GetFeatureResponse {
        FeatureDetail feature = 1;
        feast.specs.FeatureSpec rawSpec = 2;
    }

    message ListFeaturesResponse {
        repeated FeatureDetail features = 1;
    }

    // Expanded feature group spec
    message FeatureGroupDetail {
        feast.specs.FeatureGroupSpec spec = 1;
        google.protobuf.Timestamp lastUpdated = 2;
    }

    message GetFeatureGroupRequest {
        string id = 1;
    }

    message GetFeatureGroupResponse {
        FeatureGroupDetail featureGroup = 1;
    }

    message ListFeatureGroupsResponse {
        repeated FeatureGroupDetail featureGroups = 1;
    }

    // Expanded storage spec
    message StorageDetail {
        feast.specs.StorageSpec spec = 1;
        google.protobuf.Timestamp lastUpdated = 2;
    }

    message GetStorageRequest {
        string id = 1;
    }

    message GetStorageResponse {
        StorageDetail storage = 1;
    }

    message ListStorageResponse {
        repeated StorageDetail storage = 1;
    }

}
